--- a/DTrump/src/dtrump/DTrump.form
+++ b/DTrump/src/dtrump/DTrump.form
@@ -614,6 +614,9 @@
               <Properties>
                 <Property name="text" type="java.lang.String" value="Agregar"/>
               </Properties>
+              <Events>
+                <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="bt_agregar_materialMouseClicked"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JButton" name="bt_modificar_material">
               <Properties>
