--- a/DTrump/src/dtrump/DTrump.form
+++ b/DTrump/src/dtrump/DTrump.form
@@ -505,7 +505,7 @@
                                   <Group type="103" groupAlignment="0" max="-2" attributes="0">
                                       <Component id="marca_material" pref="181" max="32767" attributes="0"/>
                                       <Component id="nombre_material" max="32767" attributes="0"/>
-                                      <Component id="descirpcion_material" max="32767" attributes="0"/>
+                                      <Component id="descripcion_material" max="32767" attributes="0"/>
                                   </Group>
                               </Group>
                           </Group>
@@ -534,7 +534,7 @@
                       <EmptySpace min="-2" pref="23" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
                           <Component id="jLabel12" alignment="3" min="-2" max="-2" attributes="0"/>
-                          <Component id="descirpcion_material" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="descripcion_material" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
@@ -568,7 +568,7 @@
 
               <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
               <SubComponents>
-                <Component class="javax.swing.JTable" name="jTable1">
+                <Component class="javax.swing.JTable" name="tabla_materiales">
                   <Properties>
                     <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
                       <Table columnCount="4" rowCount="0">
@@ -604,7 +604,7 @@
             </Component>
             <Component class="javax.swing.JTextField" name="nombre_material">
             </Component>
-            <Component class="javax.swing.JTextField" name="descirpcion_material">
+            <Component class="javax.swing.JTextField" name="descripcion_material">
             </Component>
             <Component class="javax.swing.JTextField" name="marca_material">
             </Component>
