--- a/DTrump/src/dtrump/DTrump.form
+++ b/DTrump/src/dtrump/DTrump.form
@@ -715,7 +715,7 @@
             <Component class="javax.swing.JButton" name="bt_agregar_material">
               <Properties>
                 <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                  <Image iconType="3" name="/dtrump/ThumbnailAction.do.png"/>
+                  <Image iconType="3" name="/dtrump/index.png"/>
                 </Property>
               </Properties>
               <Events>
